# x16-emulator

./: .travis.yml  CMakeLists.txt  appveyor.yml  conanfile.py  main.c  memory.c  ps2.c  video.c
cmake/: FindSDL2.cmake  Findpandoc.cmake
cmake/toolchains/: mingw.cmake
webassembly/: x16emu-template.html
